--- a/.github/workflows/lint_using_flake8.yaml
+++ b/.github/workflows/lint_using_flake8.yaml
@@ -1,9 +1,12 @@
 name: Lint using Flake8
 
-on: [push]
+on:
+  push:
+    paths:
+      - '*.py'
 
 jobs:
-  build:
+  flake8_py3:
 
     runs-on: ubuntu-latest
     strategy:
@@ -19,10 +22,10 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8 pytest
+        pip install flake8
     - name: Run flake8
       uses: suo/flake8-github-action@releases/v1
       with:
-        checkName: 'Lint using Flake8'
+        checkName: 'flake8_py3'
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
