--- a/.github/workflows/lint_using_flake8.yaml
+++ b/.github/workflows/lint_using_flake8.yaml
@@ -5,18 +5,18 @@ on:
     paths:
       - '*.py'
 
+env:
+  PYTHON_VERSION: 3.8.5
+
 jobs:
-  flake8_py3:
+  lint:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: [3.6, 3.7, 3.8]
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python ${{ matrix.python-version }}
+    - name: Set up Python ${{ env.PYTHON_VERSION }}
       uses: actions/setup-python@v2
       with:
-        python-version: ${{ matrix.python-version }}
+        python-version: ${{ env.PYTHON_VERSION }}
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
@@ -24,6 +24,6 @@ jobs:
     - name: Run flake8
       uses: suo/flake8-github-action@releases/v1
       with:
-        checkName: 'flake8_py3'
+        checkName: 'lint'
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
