--- a/.github/workflows/lint_using_flake8.yaml
+++ b/.github/workflows/lint_using_flake8.yaml
@@ -1,22 +1,22 @@
 name: Lint using Flake8
 
-on:
-  push:
-    paths:
-      - '*.py'
+on: [push]
 
 env:
   PYTHON_VERSION: 3.8.5
 
 jobs:
-  build:
+  flake8_py3:
+    strategy:
+      matrix:
+        python-version: [3.6, 3.7, 3.8]
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python ${{ env.PYTHON_VERSION }}
+    - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v2
       with:
-        python-version: ${{ env.PYTHON_VERSION }}
+        python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
@@ -24,6 +24,6 @@ jobs:
     - name: Run flake8
       uses: suo/flake8-github-action@releases/v1
       with:
-        checkName: 'build'
+        checkName: 'flake8_py3'
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
