--- a/.github/workflows/lint_using_flake8.yaml
+++ b/.github/workflows/lint_using_flake8.yaml
@@ -9,9 +9,8 @@ jobs:
   flake8_py3:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up Python 3.7.4
-      uses: actions/setup-python@v2
+    - name: Setup Python
+      uses: actions/setup-python@v1
       with:
         python-version: 3.7.4
         architecture: x64
