--- a/.github/workflows/lint_using_flake8.yaml
+++ b/.github/workflows/lint_using_flake8.yaml
@@ -7,17 +7,19 @@ env:
 
 jobs:
   flake8_py3:
+    strategy:
+      matrix:
+        python-version: [3.6, 3.7, 3.8]
     runs-on: ubuntu-latest
     steps:
-    - name: Setup Python
-      uses: actions/setup-python@v1
+    - uses: actions/checkout@v2
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v2
       with:
-        python-version: 3.7.4
+        python-version: ${{ matrix.python-version }}
         architecture: x64
     - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install flake8
+      run: pip install flake8
     - name: Run flake8
       uses: suo/flake8-github-action@releases/v1
       with:
