--- a/.github/workflows/lint_using_flake8.yaml
+++ b/.github/workflows/lint_using_flake8.yaml
@@ -7,18 +7,16 @@ env:
 
 jobs:
   flake8_py3:
-    strategy:
-      matrix:
-        python-version: [3.6, 3.7, 3.8]
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v2
+    - name: Setup Python
+      uses: actions/setup-python@v1
       with:
-        python-version: ${{ matrix.python-version }}
+        python-version: 3.8
         architecture: x64
-    - name: Install dependencies
+    - name: Checkout Code
+      uses: actions/checkout@master
+    - name: Install flake8
       run: pip install flake8
     - name: Run flake8
       uses: suo/flake8-github-action@releases/v1
