--- a/.github/workflows/lint_using_flake8.yaml
+++ b/.github/workflows/lint_using_flake8.yaml
@@ -3,16 +3,19 @@ name: Lint using Flake8
 on: [push]
 
 env:
-  PYTHON_VERSION: 3.8.5
+  PYTHON_VERSION: 3.8
 
 jobs:
   flake8_py3:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: [3.6, 3.7, 3.8]
     steps:
     - name: Setup Python
       uses: actions/setup-python@v1
       with:
-        python-version: 3.8
+        python-version: ${{ matrix.python-version }}
         architecture: x64
     - name: Checkout Code
       uses: actions/checkout@master
