--- a/.github/workflows/lint_using_flake8.yaml
+++ b/.github/workflows/lint_using_flake8.yaml
@@ -8,14 +8,11 @@ env:
 jobs:
   flake8_py3:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: [3.6, 3.7, 3.8]
     steps:
     - name: Setup Python
       uses: actions/setup-python@v1
       with:
-        python-version: ${{ matrix.python-version }}
+        python-version: ${{ env.PYTHON_VERSION }}
         architecture: x64
     - name: Checkout Code
       uses: actions/checkout@master
