--- a/setup.cfg
+++ b/setup.cfg
@@ -1,2 +1,10 @@
 [metadata]
 license_files = LICENSE
+
+[flake8]
+doctests = True
+exclude = .svn,CVS,.bzr,.hg,.git,__pycache__,.tox,.github,build,.venv
+statistics = True
+per-file-ignores =
+    **/*.py:F403
+inline-quotes = double
