--- a/setup.cfg
+++ b/setup.cfg
@@ -6,5 +6,5 @@ doctests = True
 exclude = .svn,CVS,.bzr,.hg,.git,__pycache__,.tox,.github,build,.venv
 statistics = True
 per-file-ignores =
-    **/*.py:F403
+    **/__init__.py.py:F401,F403
 inline-quotes = double
