--- a/.github/workflows/test_using_pytest.yaml
+++ b/.github/workflows/test_using_pytest.yaml
@@ -1,4 +1,4 @@
-name: Test using PyTest
+name: Test using pytest
 
 on: [push]
 
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.6, 3.7, 3.8]
+        python-version: [3.7, 3.8]
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
