--- a/.github/workflows/test_using_pytest.yaml
+++ b/.github/workflows/test_using_pytest.yaml
@@ -28,3 +28,19 @@ jobs:
         path: junit/test-results-${{ matrix.python-version }}.xml
       # Use always() to always run this step to publish test results when there are test failures
       if: ${{ always() }}
+      
+  publish-test-results:
+    name: "Publish Unit Tests Results"
+    needs: [build-and-test]
+    runs-on: ubuntu-latest
+    if: always()
+    steps:
+    - name: Download Artifacts
+      uses: actions/download-artifact@v2
+      with:
+        path: artifacts
+    - name: Publish Unit Test Results
+      uses: EnricoMi/publish-unit-test-result-action/composite@v1
+      if: always()
+      with:
+        files: artifacts/**/*.xml
